# rcgp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  build-analysis.sh  justfile  main.cpp  pytest.ini  ugp.hpp
.github/workflows/: ci.yml
include/: rcgp-rhi.hpp  rcgp.hpp  ugp.hpp
include/dsl/: aliases.hpp  arithmetic.hpp  array.hpp  bitwise.hpp  block.hpp  block_canonical.hpp  boolean.hpp  branching.hpp  canonical.hpp  enumerations.hpp  generate_instantiations.py  generate_instruction_enums.py  generate_macro_swizzle.py  generators.hpp  generators_assembly.hpp  generators_glsl.hpp  instruction_block.hpp  instruction_enums.hpp  instruction_nodes.hpp  instruction_resources.hpp  instruction_types.hpp  instructions.hpp  intrinsics.hpp  jems.hpp  local.hpp  looping.hpp  matrix.hpp  optimization.hpp  optimizer.hpp  primitive_of.hpp  primitives.hpp  primitives_concepts.hpp  projection.hpp  promotion.hpp  relational.hpp  scalar.hpp  tracer.hpp  vector.hpp  vector_base.hpp
include/meta/: attribute_description.hpp  barrier.hpp  binding_description.hpp  coerce_to_handle.hpp  collect_gvrs.hpp  collect_streams.hpp  combinators.hpp  command_effects.hpp  command_normalization.hpp  command_stream.hpp  commands.hpp  concepts.hpp  contract.hpp  contract_hell.hpp  contract_introspection.hpp  descriptor.hpp  (+60 more)
samples/: deferred.cpp  prototype.cpp  rasterization.cpp  traditional.cpp
tests/: block_diff.cpp  compile.py  conftest.py  experimental.cpp  suite.cpp  test_compile_fail.py  test_compile_pass.py  test_runtime.py  test_utils.py
ugp/: stage.hpp  ugp.hpp
(+328 files in other folders)
